--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,8 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "~5.5 || >=7.0 <7.2",
+        "php": "^7.3|^7.4|^8.0",
         "guzzlehttp/guzzle": "~6.0"
-    },
-    "require-dev": {
-        "fabpot/php-cs-fixer": "^1.9",
-        "phpunit/phpunit": "^4.7"
     },
     "scripts": {
         "post-install-cmd": [
