--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,9 @@
     "autoload": {
         "psr-4": {"Humantech\\Zoho\\Recruit\\Api\\": "src/"}
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
-        "php": "^7.3|^7.4|^8.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "php": "^7.3|^7.4|^8.0"
     },
     "scripts": {
         "post-install-cmd": [
